Change background color

--- a/index.css
+++ b/index.css
@@ -19,7 +19,7 @@ button {
   height: 70px;
   border-radius: 50px;
   border-width: 0.01em;
-  background-color: black;
+  background-color: red;
   color: white;
   font-size: 20px;
 }
